<resources>
    <string name="app_name">Food Planner</string>

    <string name="empty" />
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up">Sign_Up</string>
    <string name="skip">Skip</string>
    <string name="content_description_pancakes">Pancakes Background</string>
    <string name="content_description_google">Google Log In</string>
    <string name="display_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="instructions">Instructions</string>
    <string name="country">Country</string>
    <string name="name_of_meal">Meal Name</string>
    <string name="welcome_login">Welcome back! You are just a step away from a delicious dish :)</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ingredient_img">https://www.themealdb.com/images/ingredients/%s-Small.png</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="RandomIngredients">Random Ingredients</string>
    <string name="RandomCategory">Random Category</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="passwordHint">Enter at least 8 characters</string>
    <string name="inspiration">inspiration</string>
    <string name="search_by">Search By</string>
    <!--    <string name="country">Area</string>-->
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="img_bg">Image background</string>
    <string name="addToCalendar">Make a Plan </string>
    <string name="logout">Logout</string>
    <string name="favoriteDishes">My favorite dishes</string>
    <string name="close">Close</string>
    <string name="saveAndBack">Save And Back</string>
    <string name="searchByIngredient">Search by Ingredient</string>
    <string name="searchByCategory">Search by Category</string>
    <string name="searchByArea">Search by Area</string>
    <string name="addMealFromSearch">Add Meal from Search</string>
    <string name="mealType">Meal Type</string>
    <string name="WeekPlane">Week Plane</string>
    <string name="checkConnection">Please Check Your Connection</string>
    <string name="Save">Save On Application</string>
    <string name="calender">Save On Calendar</string>
    <string-array name="mealType">
        <item>Breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
    </string-array>
    <string name="weekPlan">My Week Plan</string>


</resources>