<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_details_food"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_pancakes"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundCorner"
            tools:src="@drawable/background1" />

        <View
               android:id="@+id/black_background"
               android:layout_width="60dp"
               android:layout_height="60dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="8dp"
               android:visibility="gone"
               android:background="@drawable/black_transparent_background"
               app:layout_constraintEnd_toEndOf="@id/iv_details_food"
               app:layout_constraintTop_toTopOf="@id/iv_details_food" />

           <CheckBox
               android:id="@+id/btn_favorite"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:button="@drawable/sl_favourite_48dp"
               android:layout_marginTop="2dp"
               android:visibility="gone"
               app:buttonTint="@android:color/white"
               app:layout_constraintBottom_toBottomOf="@+id/black_background"
               app:layout_constraintEnd_toEndOf="@+id/black_background"
               app:layout_constraintStart_toStartOf="@+id/black_background"
               app:layout_constraintTop_toTopOf="@+id/black_background" />


        <TextView
            android:id="@+id/tv_details_name_of_meal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/meriendavariablefontwght"
            android:maxLines="2"
            android:text="@string/name_of_meal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_details_food"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_details_food" />

        <TextView
            android:id="@+id/tv_details_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/meriendavariablefontwght"
            android:text="@string/country"
            android:textAllCaps="false"
            android:textColor="@color/whitePink"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_details_food"
            app:layout_constraintEnd_toEndOf="@+id/tv_details_name_of_meal"
            app:layout_constraintStart_toStartOf="@+id/tv_details_name_of_meal"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_name_of_meal" />

        <TextView
            android:id="@+id/tv_details_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:fontFamily="@font/meriendavariablefontwght"
            android:text="@string/instructions"
            android:textSize="18sp"
            android:textColor="@color/darkBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video"
        />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_details_food" />


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:autoPlay="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_ingredients" />

        <Button
            android:id="@+id/btn_add_to_calender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableStart="@drawable/ic_calender"
            android:fontFamily="@font/itim_regular"
            android:text=" Add to Calendar"
            android:textColor="@color/whitePink"
            android:visibility="gone"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>